# kakaopage

./: Cargo.toml
src/: client.rs  lib.rs
src/api/: search.rs
src/api/inven/: download_data.rs  my_serieses.rs  my_singles.rs
src/api/store/: claim_gift.rs  gift_list.rs  home.rs  single.rs  singles.rs  use_ticket.rs  view_ticket.rs
src/deserializer/: min_u64.rs  yn_bool.rs
src/enums/: category.rs  direction.rs
src/models/: account.rs  file_id.rs  gift_id.rs  request.rs  response.rs  series_id.rs  single_id.rs  tokens.rs
src/util/: derive_key.rs
