[package]
name = "kakaopage"
version = "0.1.0"
edition = "2018"

[dependencies]
hex = "^0.4.3"
rand = "^0.8.4"
anyhow = "^1.0.42"
serde = "^1.0.126"
serde_derive = "^1.0.126"
serde_repr = "^0.1.7"
serde_json = "^1.0.64"
humantime-serde = "^1.0.1"
tokio = "^1.8.1"

[dependencies.reqwest]
version = "^0.11.4"
features = ["json", "cookies"]

[dev-dependencies.tokio]
version = "^1.8.1"
features = ["full"]
